# agent-langgraph

./: main.py  pyproject.toml
core/agent/: base.py
core/agents/: conversation_agent.py
core/llm/: base.py  openai_service.py
core/memory/: base.py  langgraph_memory.py  memory_manager.py
services/: LLMService.py  agent_service.py  db_service.py
tools/: BasicToolNode.py
